--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,27 @@
+annotated-types==0.7.0
+anyio==4.9.0
+certifi==2025.1.31
+cffi==1.17.1
 codrone-edu==2.2
 colorama==0.4.6
+distro==1.9.0
+exceptiongroup==1.2.2
+h11==0.14.0
+httpcore==1.0.7
+httpx==0.28.1
+idna==3.10
+jiter==0.9.0
 numpy==2.0.2
+openai==1.70.0
 pillow==11.1.0
+PyAudio==0.2.14
+pycparser==2.22
+pydantic==2.11.2
+pydantic_core==2.33.1
 pyserial==3.5
+sniffio==1.3.1
+sounddevice==0.5.1
+SpeechRecognition==3.14.2
+tqdm==4.67.1
+typing-inspection==0.4.0
+typing_extensions==4.13.1
